--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.app.day {
+    background-color: whitesmoke;
+}
+.app.night {
+    background-color: lightsteelblue;
+}
